# flighty

./: .flighty.yaml  Cargo.toml  LICENSE  README.md  i18n_build.rs
locales/en/: main.ftl
locales/tr/: main.ftl
src/: error.rs  lib.rs  main.rs
src/cli/: mod.rs
src/commands/: build.rs  config.rs  deploy.rs  flutter.rs  init.rs  language.rs  mod.rs
src/config/: file.rs  mod.rs
src/core/: mod.rs
src/i18n/: mod.rs
src/utils/: mod.rs
templates/: config.yaml  defaults.yaml  hooks.yaml
templates/environments/: development.yaml  production.yaml  staging.yaml
