[package]
name = "flighty"
version = "0.1.0"
edition = "2021"
authors = ["Hüseyin Konya"]
description = "Yerel tabanlı Flutter uygulama dağıtım ve yönetim CLI aracı"
readme = "README.md"
license = "MIT"

[dependencies]
# CLI argüman işleme
clap = { version = "4.4", features = ["derive"] }
# Hata yönetimi
anyhow = "1.0"
thiserror = "1.0"
# Loglama
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Asenkron runtime
tokio = { version = "1.0", features = ["full"] }
# Yapılandırma yönetimi
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
# Dosya sistemi işlemleri
walkdir = "2.4"
# Süreç yönetimi
which = "5.0"
# HTTP istekleri
reqwest = { version = "0.11", features = ["json"] }
# Terminal UI
console = "0.15"
indicatif = "0.17"
dialoguer = "0.11"
# Şifreleme ve güvenlik
ring = "0.17"
# Sıkıştırma
zip = "0.6"
# Semver işleme
semver = "1.0"
# Çoklu dil desteği
fluent = "0.16"
fluent-bundle = "0.15"
fluent-langneg = "0.13"
unic-langid = "0.9"
once_cell = "1.19"
# Sistem dili algılama
sys-locale = "0.3.1"

[dev-dependencies]
# Test araçları
pretty_assertions = "1.4"
tempfile = "3.8"
mockall = "0.12"
test-case = "3.3"

[profile.release]
# Release optimizasyonları
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev.package."*"]
# Geliştirme optimizasyonları
opt-level = 2
